整合groovy